--- a/style.css
+++ b/style.css
@@ -50,3 +50,42 @@ body {
   min-width: 100%;
   height: 500px;
 }
+
+#footer{
+	position: absolute;
+	height: 130px;
+	bottom: 0px;
+
+}
+
+#prazno{
+	height: 130px;
+}
+
+h1,h4{
+	text-align: center;
+}
+
+.prva p, h3{
+	padding-top: 10px;
+	padding-left: 370px;
+}
+
+.col-md-8 h3{
+	color: #4CAF50;
+}
+
+.druga p{
+	padding-top: 10px;
+	padding-right: 370px;
+}
+
+
+.treca p{
+	padding-top: 60px;
+	padding-left: 370px;
+}
+
+.col-md-8 i{
+	color: #4CAF50;
+}
