--- a/style.css
+++ b/style.css
@@ -52,9 +52,8 @@ body {
 }
 
 #footer{
-	position: absolute;
+	clear:both;
 	height: 130px;
-	bottom: 0px;
 
 }
 
@@ -88,4 +87,14 @@ h1,h4{
 
 .col-md-8 i{
 	color: #4CAF50;
+}
+
+.col-md-6 h2 a{
+	color: #333333;
+	text-decoration: none;
+}
+
+.col-md-6 h2 a:hover{
+	color: #4CAF50;
+	text-decoration: none;
 }
