--- a/style.css
+++ b/style.css
@@ -98,3 +98,11 @@ h1,h4{
 	color: #4CAF50;
 	text-decoration: none;
 }
+
+.col-md-6 img:hover{
+	filter: grayscale(100%);
+	-webkit-filter: grayscale(100%); /* For Webkit browsers */
+	filter: gray; /* IE 6 - 9 */
+	-webkit-transition: all .6s ease; /* Chrome i Safari */
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+}
