--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@ body {
 	color: #4CAF50;
 }
 #sticker{
-	margin: 0 auto;
-	width: 100%;
+	margin: 0px;
+	width: 100% !important;
 	background-color:#222222;
 	border-radius: 0 !important;
 	z-index: 9999 !important;
+	height: 62px !important;
 }
 
 #btnn{
@@ -21,17 +22,20 @@ body {
 }
 
 .dropdown-menu {
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
+	width: 80px;
+	margin-left: calc(50% - 80px) !important;
+	margin-right: auto !important;
+	text-align: center !important;
 }
+
 
 .dropdown ul li{
 
 }
 
 .carousel {
-  height: 500px;
+  height: 400px;
+  width: 1280px;
   margin-bottom: 20px;
   margin-top: -20px;
 }
@@ -40,7 +44,7 @@ body {
 }
 
 .carousel .item {
-  height: 500px;
+  height: 400px;
   background-color: #777;
 }
 .carousel-inner > .item > img {
@@ -51,10 +55,16 @@ body {
   height: 500px;
 }
 
+.razmak{
+	width: 100%;
+	height: 500px;
+}
+
 #footer{
 	clear:both;
 	height: 130px;
-
+	position: absolute !important;
+	bottom: auto;
 }
 
 #prazno{
