--- a/style.css
+++ b/style.css
@@ -43,6 +43,19 @@ body {
   z-index: 10;
 }
 
+@media (max-width:1280px) {
+	.carousel{
+  		height: 400px;
+  		width: 100%;
+		margin-bottom: 20px;
+  		margin-top: -20px;
+	}
+	.item{
+  		width: 100% !important;
+	}
+}
+
+
 .carousel .item {
   height: 400px;
   background-color: #777;
@@ -65,6 +78,22 @@ body {
 	height: 130px;
 	position: absolute !important;
 	bottom: auto;
+}
+
+#footer p{
+	text-align: center;
+	color: #595959;
+}
+
+#footer a{
+	text-decoration: none;
+	color: #4CAF50;
+}
+
+#footer a:hover{
+	text-decoration: none;
+	color: #3e8e41;
+	font-weight: bold;
 }
 
 #prazno{
