--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 	width: 100% !important;
 	background-color:#222222;
 	border-radius: 0 !important;
-	z-index: 9999 !important;
+	z-index: 100 !important;
 	height: 62px !important;
 }
 
@@ -22,8 +22,8 @@ body {
 }
 
 .dropdown-menu {
-	width: 280px;
-	margin-left: calc(50% - 140px) !important;
+	width: 326px;
+	margin-left: calc(50% - 163px) !important;
 	margin-right: auto !important;
 	text-align: justify !important;
 }
@@ -32,8 +32,8 @@ body {
 	font-weight: bold;
 }
 
-.dropdown ul li{
-
+.dropdown-menu li{
+	font-size: 17px;
 }
 
 .carousel {
@@ -148,3 +148,23 @@ h1,h4{
 	-webkit-transition: all .6s ease; /* Chrome i Safari */
 	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
 }
+
+.modal-header, .modal-footer{
+	background-color: rgba(43, 41, 40, 0.3);
+}
+
+.modal-body a{
+	text-decoration: none;
+	color: #000000;
+}
+
+.modal-body a:hover{
+	text-decoration: none;
+	color: #4CAF50;
+	font-weight: bold;
+}
+
+.fa-terminal{
+	color: #4CAF50;
+}
+
