--- a/style.css
+++ b/style.css
@@ -107,6 +107,14 @@ h1,h4{
 	text-align: center;
 }
 
+#Marko {
+	cursor: pointer; cursor: hand;
+}
+
+#Marina{
+	cursor: pointer; cursor: hand;
+}
+
 .prva p, h3{
 	padding-top: 10px;
 	padding-left: 370px;
